akademia/nginx-deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: nginx # Name of the deployment
  namespace: akademia # Name of the namespace
  labels:
    app: nginx # Name of your application
spec:
  selector:
    matchLabels:
      app: nginx # Name of your application
  replicas: 1 # Number of replicas
  template:
    metadata:
      labels:
        app: nginx # Name of your application
    spec:
      containers:
      # Containers are the individual pieces of your application that you want
      # to run.
      - name: nginx # Name of the container
        image: nginx:latest # The image you want to run
        # resources:
        #   limits:
        #     memory: 512Mi
        #     cpu: "1"
        #   requests:
        #     memory: 256Mi
        #     cpu: "0.2"
        ports:
        # Ports are the ports that your application uses.
        - containerPort: 80 # The port that your application uses
        volumeMounts:
        # VolumeMounts are the volumes that your application uses.
        - mountPath: /var/www/html # The path that your application uses
          name: idk
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: akademia
spec:
  selector:
    app:  nginx
  # ---
  type:  ClusterIP
  # ClusterIP means this service can be accessed by any pod in the cluster
  ports:
  - name:  http
    port:  80
