akademia/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: traefik.arctix.dev
      http:
        paths:
          - path: /bar
            pathType: Exact
            backend:
              service:
                name:  nginx
                port:
                  number: 80
