akademia/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 3
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: 'postgres:16.2-bookworm'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdata
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: postgres-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prisma-studio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prisma-studio
  template:
    metadata:
      labels:
        app: prisma-studio
    spec:
      containers:
        - name: studio
          image: 'codejamninja/prisma-studio'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 55555
              name: studio
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prisma-studio-ingress
spec:
  rules:
  - host: "backend.akademia.cc"
    http:
      paths:
      - path: /studio
        pathType: Prefix
        backend:
          service:
            name: prisma-studio
            port:
              name: studio
